@@ -67,17 +67,17 @@ $this->assign('newlineregexp', '/([^ ]{25})/i');
 			<h1 class="title">{if $current eq ''}{$smarty.const.HTML_NAME|@htmlspecialchars}{else}{$current|@htmlspecialchars}{/if}</h1>
 {assign var=page value=$smarty.request.start|intval}
 {assign var=item_count value=$files|@count}
-			<span class="subText">Use remote access to browse and download files.</span>{if $error eq '' and count($files) > 0}<span class="subText">Displaying items {$smarty.request.start} to {$page+$item_count}{if $total_count > $smarty.request.limit} out of {$total_count} file(s){/if}.</span>{/if}
+			<span class="subText">Use remote access to browse files. Drag to select files, and right click for download options.</span>{if $error eq '' and count($files) > 0}<span class="subText">Displaying items {$smarty.request.start} to {$page+$item_count}{if $total_count > $smarty.request.limit} out of {$total_count} file(s){/if}.</span>{/if}
 {include file=$templates.TEMPLATE_PAGES}
 			<div class="titlePadding"></div>
-			<div class="files">
+			<div class="files" id="files">
 {if isset($error) and $error != ''}
 					<span style="color:#C00"><b>{$error}</b></span>
 {elseif count($files) == 0}
 					<b>There are no files to display</b>
 {else}
 {section name=file loop=$files}
-					<div class="file"><div class="selected"></div>
+					<div class="file" onmousedown="deselectAll(event);fileSelect(this, true, event);return false;" oncontextmenu="showMenu(this);return false;"><div class="notselected"></div>
 {assign var=encoded value=$files[file].Filepath|urlencode|htmlspecialchars}
 {if $files[file].Filetype=="FOLDER" || 
 ($files[file].Filepath|@handles:'archive' && $smarty.request.cat != $prefix|cat:'archive') || 
@@ -105,7 +105,7 @@ $this->assign('newlineregexp', '/([^ ]{25})/i');
 								</td>
 							</tr>
 						</table>
-						<a class="itemLink" href="{$link}" onmouseout="this.parentNode.firstChild.style.visibility = 'hidden';{literal}if(!loaded){return false;}{/literal} document.getElementById('info_{$files[file].id}').style.display = 'none';document.getElementById('info_{$files[file].id}').style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.style.visibility = 'visible';{literal}if(!loaded){return false;}{/literal} document.getElementById('info_{$files[file].id}').style.display = '';document.getElementById('info_{$files[file].id}').style.visibility = 'visible';"><span>{if isset($parts)}{$parts|@preg_replace:'<b style="background-color:#990">$0</b>':$files[file].Filename}{else}{$files[file].Filename}{/if}</span></a>
+						<a class="itemLink" href="{$link}" onmouseout="this.parentNode.firstChild.className = 'notselected';{literal}if(!loaded){return false;}{/literal} document.getElementById('info_{$files[file].id}').style.display = 'none';document.getElementById('info_{$files[file].id}').style.visibility = 'hidden';" onmouseover="this.parentNode.firstChild.className = 'selected';{literal}if(!loaded){return false;}{/literal} document.getElementById('info_{$files[file].id}').style.display = '';document.getElementById('info_{$files[file].id}').style.visibility = 'visible';"><span>{if isset($parts)}{$parts|@preg_replace:'<b style="background-color:#990">$0</b>':$files[file].Filename}{else}{$files[file].Filename}{/if}</span></a>
 					</div>
 {/section}
 {/if}
