@@ -1,4 +1,7 @@
 2009-04-16
+Worked on live template, got drag selecting working
+
+2009-04-16
 Worked on reports.php plugin, file renaming working fairly well
 Added lock detection to cron.php script, now if the log is locked it will exit the script, so they don't overlap
 
